# otelx

./: Cargo.toml  README.md  bump.sh  specs.md
otelx/: Cargo.toml
otelx-attributes/: Cargo.toml
otelx-attributes/src/: lib.rs
otelx-axum/: Cargo.toml
otelx-axum/src/: lib.rs
otelx-core/: Cargo.toml
otelx-core/src/: builder.rs  lib.rs  macros.rs
otelx-sqlx/: Cargo.toml
otelx-sqlx/src/: lib.rs
otelx/src/: finalizer.rs  lib.rs  trace_block.rs  tracing.rs
