[package]
name = "otelx-attributes"
version = "0.0.1"
edition = "2024"
authors = ["Lucas Jahier <lucas.jahier@stratorys.com>"]
description = "A minimal and unified interface for using OpenTelemetry and OpenTelemetry SDK in Rust."
license-file = "LICENSE"
repository = "https://github.com/caffeidine/otelx"
homepage = "https://github.com/caffeidine/otelx"
categories = [
  "development-tools::debugging",
  "development-tools::profiling",
  "development-tools",
]
keywords = [
  "opentelemetry",
  "tracing",
  "telemetry",
  "observability",
  "macro",
  "instrument",
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full"] }
